--- a/sth1edwv.csproj
+++ b/sth1edwv.csproj
@@ -60,6 +60,13 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Level.cs" />
+    <Compile Include="LevelObjectSet.cs" />
+    <Compile Include="ObjectChooser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ObjectChooser.Designer.cs">
+      <DependentUpon>ObjectChooser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Palettes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -75,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ObjectChooser.resx">
+      <DependentUpon>ObjectChooser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
