--- a/sth1edwv.csproj
+++ b/sth1edwv.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,6 +60,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameText.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="LevelObjectSet.cs" />
     <Compile Include="ObjectChooser.cs">
