--- a/sth1edwv.csproj
+++ b/sth1edwv.csproj
@@ -68,7 +68,7 @@
     <Compile Include="ObjectChooser.Designer.cs">
       <DependentUpon>ObjectChooser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Palettes.cs" />
+    <Compile Include="Palette.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TileChooser.cs">
