--- a/sth1edwv.csproj
+++ b/sth1edwv.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Palette.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tile.cs" />
     <Compile Include="TileChooser.cs">
       <SubType>Form</SubType>
     </Compile>
