--- a/sth1edwv.csproj
+++ b/sth1edwv.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Palette.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RLECompressor.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="TileChooser.cs">
       <SubType>Form</SubType>
