--- a/sth1edwv.csproj
+++ b/sth1edwv.csproj
@@ -26,7 +26,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
@@ -75,7 +74,7 @@
     <Compile Include="Palette.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RLECompressor.cs" />
+    <Compile Include="Compression.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="TileChooser.cs">
       <SubType>Form</SubType>
