--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
+        #automatic_release_tag: "latest"
         prerelease: false
-        title: "Automatic Build"
+        title: "Automatic build of ${{github.sha}}"
         files: program.zip
