--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Be.Windows.Forms.HexBox" version="1.6.1" targetFramework="net45" />
+  <package id="Equin.ApplicationFramework.BindingListView" version="1.4.5222.35545" targetFramework="net45" />
 </packages>
