--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{secrets.GITHUB_TOKEN}}"
-        automatic_release_tag: "v${{env.BUILD_NUMBER}}"
+        automatic_release_tag: "v0.${{env.BUILD_NUMBER}}"
         prerelease: false
         title: "Automatic build #${{env.BUILD_NUMBER}}"
         files: program.zip
