--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Build
       shell: cmd
       run: |
+        cd source
         nuget restore
         msbuild sth1edwv.sln /p:Configuration=Release
         7z a program.zip bin\Release\*
@@ -25,7 +26,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: program
-        path: bin\Release\*
+        path: source\bin\Release\*
 
     - name: Build Number Generator
       uses: einaregilsson/build-number@v3
@@ -39,4 +40,4 @@ jobs:
         automatic_release_tag: "v0.${{env.BUILD_NUMBER}}"
         prerelease: false
         title: "Automatic build #${{env.BUILD_NUMBER}}"
-        files: program.zip
+        files: source\program.zip
