--- a/editor/sth1edwv.csproj
+++ b/editor/sth1edwv.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FloorSizeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FloorSizeForm.Designer.cs">
+      <DependentUpon>FloorSizeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GameText.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="LevelObject.cs" />
@@ -105,6 +111,9 @@
     <Compile Include="TileSetViewer.Designer.cs">
       <DependentUpon>TileSetViewer.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FloorSizeForm.resx">
+      <DependentUpon>FloorSizeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
