--- a/editor/sth1edwv.csproj
+++ b/editor/sth1edwv.csproj
@@ -33,7 +33,7 @@
     <LangVersion>9</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>sth1edwv.Program</StartupObject>
@@ -53,14 +53,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Block.cs" />
-    <Compile Include="BlockMapping.cs" />
+    <Compile Include="GameObjects\Block.cs" />
+    <Compile Include="GameObjects\BlockMapping.cs" />
     <Compile Include="Cartridge.cs" />
-    <Compile Include="Floor.cs" />
-    <Compile Include="FloorEditor.cs">
+    <Compile Include="GameObjects\Floor.cs" />
+    <Compile Include="Controls\FloorEditor.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="FloorEditor.Designer.cs">
+    <Compile Include="Controls\FloorEditor.Designer.cs">
       <DependentUpon>FloorEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -69,55 +69,55 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FloorSizeForm.cs">
+    <Compile Include="Forms\FloorSizeForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FloorSizeForm.Designer.cs">
+    <Compile Include="Forms\FloorSizeForm.Designer.cs">
       <DependentUpon>FloorSizeForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameText.cs" />
-    <Compile Include="Level.cs" />
-    <Compile Include="LevelObject.cs" />
-    <Compile Include="LevelObjectSet.cs" />
+    <Compile Include="GameObjects\GameText.cs" />
+    <Compile Include="GameObjects\Level.cs" />
+    <Compile Include="GameObjects\LevelObject.cs" />
+    <Compile Include="GameObjects\LevelObjectSet.cs" />
     <Compile Include="Memory.cs" />
-    <Compile Include="ObjectChooser.cs">
+    <Compile Include="Forms\ObjectChooser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ObjectChooser.Designer.cs">
+    <Compile Include="Forms\ObjectChooser.Designer.cs">
       <DependentUpon>ObjectChooser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Palette.cs" />
+    <Compile Include="GameObjects\Palette.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Compression.cs" />
-    <Compile Include="Screen.cs" />
-    <Compile Include="Tile.cs" />
-    <Compile Include="TileChooser.cs">
+    <Compile Include="GameObjects\Screen.cs" />
+    <Compile Include="GameObjects\Tile.cs" />
+    <Compile Include="Forms\TileChooser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TileChooser.Designer.cs">
+    <Compile Include="Forms\TileChooser.Designer.cs">
       <DependentUpon>TileChooser.cs</DependentUpon>
     </Compile>
-    <Compile Include="ItemPicker.cs">
+    <Compile Include="Controls\ItemPicker.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ItemPicker.Designer.cs">
+    <Compile Include="Controls\ItemPicker.Designer.cs">
       <DependentUpon>ItemPicker.cs</DependentUpon>
     </Compile>
-    <Compile Include="TileSet.cs" />
-    <Compile Include="TileSetViewer.cs">
+    <Compile Include="GameObjects\TileSet.cs" />
+    <Compile Include="Controls\TileSetViewer.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="TileSetViewer.Designer.cs">
+    <Compile Include="Controls\TileSetViewer.Designer.cs">
       <DependentUpon>TileSetViewer.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="FloorSizeForm.resx">
+    <EmbeddedResource Include="Forms\FloorSizeForm.resx">
       <DependentUpon>FloorSizeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ObjectChooser.resx">
+    <EmbeddedResource Include="Forms\ObjectChooser.resx">
       <DependentUpon>ObjectChooser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -130,13 +130,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="TileChooser.resx">
+    <EmbeddedResource Include="Forms\TileChooser.resx">
       <DependentUpon>TileChooser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ItemPicker.resx">
+    <EmbeddedResource Include="Controls\ItemPicker.resx">
       <DependentUpon>ItemPicker.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TileSetViewer.resx">
+    <EmbeddedResource Include="Controls\TileSetViewer.resx">
       <DependentUpon>TileSetViewer.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -160,8 +160,9 @@
     <None Include="Resources\SolidityImages.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="icon.ico" />
+    <Content Include="Resources\icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
