--- a/editor/sth1edwv.csproj
+++ b/editor/sth1edwv.csproj
@@ -53,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\FloorSharingEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FloorSharingEditor.Designer.cs">
+      <DependentUpon>FloorSharingEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="GameObjects\Block.cs" />
     <Compile Include="GameObjects\BlockMapping.cs" />
     <Compile Include="Cartridge.cs" />
@@ -111,6 +117,9 @@
     <Compile Include="Controls\TileSetViewer.Designer.cs">
       <DependentUpon>TileSetViewer.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\FloorSharingEditor.resx">
+      <DependentUpon>FloorSharingEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FloorSizeEditor.resx">
       <DependentUpon>FloorSizeEditor.cs</DependentUpon>
     </EmbeddedResource>
