Added screen tilemaps to saved data (even though you can't edit them yet), giving some data optimisation over the original (dropping unused credits tilemap, skipping duplicate tiles in map screen foreground tilemap)

--- a/editor/sth1edwv.csproj
+++ b/editor/sth1edwv.csproj
@@ -94,6 +94,7 @@
     <Compile Include="GameObjects\Level.cs" />
     <Compile Include="GameObjects\LevelObject.cs" />
     <Compile Include="GameObjects\LevelObjectSet.cs" />
+    <Compile Include="GameObjects\TileMap.cs" />
     <Compile Include="Memory.cs" />
     <Compile Include="Forms\ObjectEditor.cs">
       <SubType>Form</SubType>
