--- a/editor/sth1edwv.csproj
+++ b/editor/sth1edwv.csproj
@@ -54,6 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArtItem.cs" />
+    <Compile Include="Controls\SpaceVisualizer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\SpaceVisualizer.Designer.cs">
+      <DependentUpon>SpaceVisualizer.cs</DependentUpon>
+    </Compile>
     <Compile Include="FreeSpace.cs" />
     <Compile Include="GameObjects\IDrawableBlock.cs" />
     <Compile Include="Controls\PaletteEditor.cs">
@@ -129,6 +135,9 @@
     </Compile>
     <EmbeddedResource Include="Controls\PaletteEditor.resx">
       <DependentUpon>PaletteEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\SpaceVisualizer.resx">
+      <DependentUpon>SpaceVisualizer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FloorSharingEditor.resx">
       <DependentUpon>FloorSharingEditor.cs</DependentUpon>
